# powerblade

./: .gitignore  .gitmodules  README.md
cad/: full_system.SLDASM  mill-max-0965-0-15-20-80-14-11-0_6995-0(6995-0-02-20-00-00-13-0).sldprt
data/: .gitignore  PlugWidthEvaluation.xlsx  current_test_3_9.txt  lightbox_291W_100PF.csv  oscope_41W_091PF.CSV  underdamped.CSV  vcc_cdchg_1s.CSV  vcc_chgdischg_wble.csv  vsense_and_zc.csv  w_to_curr.xlsx
data/current_test_3_9/: .gitignore  current_test.plt
data/current_waveforms/: blender_puere.CSV  blender_stir.CSV  drill_full.CSV  drill_low.CSV  fridge.CSV  hotairgun_fullHeatAndAir.CSV  hotairgun_lowHeatLowAir.CSV  ice_shaver_shaving.CSV  oscope.CSV  printer_idle.CSV  printer_printing.CSV  process_waveform.py  router_on.CSV  waveforms.plt
data/pf_1_wRange/: pf1.plt  pf1_122w.txt
data/pf_n1/: pfn1.plt
data/sql/: .gitignore  basic_data.sh  blees.plt  blees_light_lookup.csv  dataviewer.plt  deviceList.txt  log_to_sql.py  log_to_sql_bulk.py  update_tables.sh
data/stackup_model/: 05mil_adhesive.SLDPRT  05mil_polyamide.SLDPRT  08mil_adhesive.SLDPRT  14mil_copper.SLDPRT  1mil_lpi.SLDPRT  1mil_polyamide.SLDPRT  2mil_adhesive.SLDPRT  6mil_fr4.SLDPRT  full_stackup.SLDASM  l1_copper.SLDPRT  l1l4_fr4.SLDPRT  l2l3_polyimide.SLDPRT  layer_stackup.SLDASM  stackup_zoom.pptx
data/variance/: .gitignore  PowerBlade_Variance.xlsx  PowerBlade_Variance_Full.xlsx  conv_data.py  pb.plt
data/vcc_cdchg_w_icore/: process_waveform.py  vcc__cdchg_far.CSV  vcc_cdchg_close.CSV  vcc_cdchg_mid.CSV  vcc_cdchg_veryFar.CSV  waveforms_far.plt  waveforms_mid.plt
data/wattHours_to_time/: non_resistive.xlsx  resistive.xlsx
data_collection/advertisements/: README.md  config.js  package.json  powerblade_adv.js  powerblade_adv_influx.js
data_collection/calibration/: calibrate.js  package.json
data_collection/emoncms/: README.md  package.json  powerblade_emoncms.js
data_collection/measurements/: README.md  (+7 more)
eagle/: .gitignore
images/: logo_v1.ai
matlab/: process_isense.m
software/: .gitignore
software/GNURadio/gr-PowerBlade_Utils/lib/: ByteToPseudoUARTi_impl.cc  ByteToPseudoUARTi_impl.h  CMakeLists.txt  qa_PowerBlade_Utils.cc  qa_PowerBlade_Utils.h  test_PowerBlade_Utils.cc
sql/: .gitignore  add_indexes.sql  breakdown.plt  breakdown_cdf.plt  cleanup.sql  create_tables.sql  create_user.sql  create_view.sql  create_view_v2.sql  dataviewer.plt  device_id.sql  fault_difference.sql  inf_ss_pb.txt  ligeiro.sql  loc0.sql  loc1.sql  occupancy.sql  scratchpad.sql  seq.sql  sql_status.py  sql_status_v2.py  statistics.sql  system_status.sh  update_tables.sh  upload_status_form.sql
(+782 files in other folders)
